--- a/mir_description/package.xml
+++ b/mir_description/package.xml
@@ -26,5 +26,5 @@
   <exec_depend>rviz</exec_depend>
   <exec_depend>urdf</exec_depend>
   <exec_depend>xacro</exec_depend>
-  <exec_depend>roboskel_ros_resources</exec_depend> 
+<!--  <exec_depend>roboskel_ros_resources</exec_depend> -->
 </package>
